<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="521dp"
        android:layout_height="0dp"
        tools:layout_editor_absoluteX="-47dp"
        tools:layout_editor_absoluteY="2dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="221dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/send_button"
        android:onClick="signIn"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editText" />

    <android.support.v7.widget.GridLayout
        android:layout_width="227dp"
        android:layout_height="128dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="488dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getMovieList"
            android:text="@string/movie_button" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getMap"
            android:text="@string/top_right"
            app:layout_column="22"
            app:layout_row="0" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getTrafficList"
            android:text="@string/bottom_left"
            app:layout_column="0"
            app:layout_row="45" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="displayToast"
            android:text="@string/bottom_right"
            app:layout_column="22"
            app:layout_row="45" />
    </android.support.v7.widget.GridLayout>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="221dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="224dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

</android.support.constraint.ConstraintLayout>